--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -8,3 +8,4 @@ $background-color: white;
 $dark-background-color: #4c4c4c;
 $primary-color: #d46049;
 $title-letter-spacing: 1.3px;
+$breakpoint-small: 768px;
